syntax = "proto3";
package nl.svsticky.chroma;

import "entity/album.proto";

message ListAlbumsResponse {
  repeated Album albums = 1;
}