syntax = "proto3";
package nl.svsticky.chroma;

import "entity/photo.proto";

message ReportBrokenPhotoRequest {
  string id = 1;
  PhotoQuality photoQuality = 2;
}